refactor: reorganizar carpetas para persistencia y modificación en volumes en docker compose

--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     # 1. Servir el Frontend de React
     location / {
@@ -11,14 +11,16 @@ server {
 
     # 2. Redirigir tráfico a n8n
     location /n8n/ {
-        proxy_pass http://n8n:5678/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        return 302 http://$host:5678/;
     }
 
     # 3. Redirigir tráfico a la Evolution API
-    location /api/ {
-        proxy_pass http://evoapicloud:3000/;
-        proxy_set_header Host $host;
+    location /evolutionapi/ {
+        return 302 http://$host:3000/manager;
+    }
+
+    # 3. Redirigir tráfico a la pgAdmin API
+    location /evolutionapi/ {
+        return 302 http://$host:5050/;
     }
 }
