--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -20,7 +20,7 @@ server {
     }
 
     # 3. Redirigir tráfico a la pgAdmin API
-    location /evolutionapi/ {
+    location /pgadmin/ {
         return 302 http://$host:5050/;
     }
 }
