--- a/infraestructure/docker/docker-compose.yml
+++ b/infraestructure/docker/docker-compose.yml
@@ -27,22 +27,6 @@ services:                   # Sección donde se definen todos los contenedores
     networks:
       - net
 
-  pgadmin:                  # Servicio de pgAdmin (interfaz gráfica para PostgreSQL)
-    container_name: pgadmin  
-    image: dpage/pgadmin4:latest
-    restart: always  
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}         # Email de acceso
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}   # Contraseña de acceso
-      PGADMIN_LISTEN_PORT: 80                                 # Puerto interno donde escucha pgAdmin
-      PGADMIN_SERVER_MODE: "False"                            # Modo no servidor (modo de escritorio web)
-    ports:
-      - "5050:80"   # Exponer pgAdmin en el puerto 5050 del host
-    networks:
-      - net 
-    depends_on:
-      - postgres    # Esperar a que PostgreSQL inicie antes de arrancar pgAdmin
-
   n8n:                      # Servicio de n8n
     container_name: n8n
     image: n8nio/n8n:latest
@@ -113,17 +97,16 @@ services:                   # Sección donde se definen todos los contenedores
     networks:
       - net           # Conectado a la red "net"
 
-  nginx:
-      image: nginx:alpine
-      container_name: nginx
-      restart: always
-      ports:
-        - "80:80"   # Puerto para la web pública
-      volumes:
-        - ../../frontend/dist:/usr/share/nginx/html # Pasamos los archivos de React a Nginx
-        - ../../infraestructure/nginx/default.conf:/etc/nginx/conf.d/default.conf # Pasamos nuestra configuración personalizada
-      networks:
-        - net
+  frontend:
+    build:
+      context: ../../   # desde Proyecto-Veterinaria-DSI
+      dockerfile: infraestructure/docker/frontend.Dockerfile
+    container_name: frontend
+    restart: always
+    ports:
+      - "80:80"
+    networks:
+      - net
 
 networks:
   net:    # Se define una red Docker para que los servicios se comuniquen entre sí
