--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -1,22 +1,51 @@
 server {
-    listen 80;
-    server_name _;
+    listen 443 ssl;
+    server_name petsi-dsi.website www.petsi-dsi.website;
 
-    # 1. Servir el Frontend de React
+    ssl_certificate /etc/nginx/ssl/petsi-dsi-certificado.pem;
+    ssl_certificate_key /etc/nginx/ssl/petsi-dsi-key.key;
+
+    # FRONTEND
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ /index.html; # Necesario para React Router
+        try_files $uri $uri/ /index.html;
     }
+}
+server {
+    listen 443 ssl;
+    server_name n8n.petsi-dsi.website;
 
-    # 2. Redirigir tráfico a n8n
-    location /n8n/ {
-        return 302 http://$host:5678/;
+    ssl_certificate /etc/nginx/ssl/petsi-dsi-certificado.pem;
+    ssl_certificate_key /etc/nginx/ssl/petsi-dsi-key.key;
+
+    location / {
+        proxy_pass http://n8n:5678;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+server {
+    listen 443 ssl;
+    server_name evo.petsi-dsi.website;
 
-    # 3. Redirigir tráfico a la Evolution API
-    location /evolutionapi/ {
-        return 302 http://$host:3000/manager;
+    ssl_certificate /etc/nginx/ssl/petsi-dsi-certificado.pem;
+    ssl_certificate_key /etc/nginx/ssl/petsi-dsi-key.key;
+
+    location / {
+        proxy_pass http://evoapicloud:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-
+}
+server {
+    listen 80;
+    server_name petsi-dsi.website www.petsi-dsi.website
+                n8n.petsi-dsi.website
+                api.petsi-dsi.website;
+    return 301 https://$host$request_uri;
 }
