--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-dom": "^5.3.3",
-    "apexcharts": "^3.54.1",
+    "apexcharts": "^5.3.6",
     "bootstrap": "^5.3.1",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "1.4.1",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-copy-to-clipboard": "^5.1.0",
