--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -21,7 +21,11 @@ server {
 
     location / {
         proxy_pass http://n8n:5678;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_set_header Origin 'https://n8n.petsi-dsi.website';  # <- importante
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
