--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -47,6 +47,26 @@ server {
     }
 }
 server {
+    listen 443 ssl;
+    server_name api.petsi-dsi.website;
+
+    ssl_certificate /etc/nginx/ssl/petsi-dsi-certificado.pem;
+    ssl_certificate_key /etc/nginx/ssl/petsi-dsi-key.key;
+
+    location / {
+        proxy_pass http://backend-python:8000;
+        proxy_http_version 1.1;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+server {
     listen 80;
     server_name petsi-dsi.website www.petsi-dsi.website
                 n8n.petsi-dsi.website
