--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -11,6 +11,20 @@ server {
         index index.html;
         try_files $uri $uri/ /index.html;
     }
+
+    # BACKEND API
+    location /api/ {
+        proxy_pass http://backend-python:8000/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
 server {
     listen 443 ssl;
@@ -40,26 +54,6 @@ server {
 
     location / {
         proxy_pass http://evoapicloud:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-server {
-    listen 443 ssl;
-    server_name api.petsi-dsi.website;
-
-    ssl_certificate /etc/nginx/ssl/petsi-dsi-certificado.pem;
-    ssl_certificate_key /etc/nginx/ssl/petsi-dsi-key.key;
-
-    location / {
-        proxy_pass http://backend-python:8000;
-        proxy_http_version 1.1;
-
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
