--- a/infraestructure/nginx/default.conf
+++ b/infraestructure/nginx/default.conf
@@ -13,8 +13,8 @@ server {
     }
 
     # BACKEND API
-    location /api/ {
-        proxy_pass http://backend-python:8000/;
+    location /api {
+        proxy_pass http://backend-python:8000;
         proxy_http_version 1.1;
 
         proxy_set_header Upgrade $http_upgrade;
